# workers-rs-shortenurl

./: Cargo.toml  README.md  cliff.toml  deny.toml  test.rest  wrangler.toml
src/: lib.rs
