[package]
name = "workers-rs-shortenurl"
version = "0.1.0"
edition = "2021"
authors = ["EricZzz <biggogten@gmail.com>"]
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http'] }
nanoid = "0.4.0"
getrandom = { version = "0.2.15", features = ["js"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4"
